--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,18 @@ spring.datasource.password=springstudent
 
 # turn off spring banner
 spring.main.banner-mode=off
+
+# reduce logging level to warn/errors only
+logging.level.root=warn
+
+# Adding logging configs to display the sql statements
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
+
+# configure JPA/Hibernate to auto create the table
+# every time app is run, this property will drop the table and the create the table from scratch
+# not recommended to be used in production environment
+# spring.jpa.hibernate.ddl-auto=create
+
+# previous existing data remains in sql database
+spring.jpa.hibernate.ddl-auto=update
